--- a/views/center/dashboard.ejs
+++ b/views/center/dashboard.ejs
@@ -4,62 +4,66 @@
 
             <div class="page-wrap">
               <%- include('../includes/sidebar')-%>
-
-                
                 <div class="main-content">
                     <div class="container-fluid">
                         <div class="row clearfix">
-                            <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="col">
+                                <select id="center" class="form-control">
+                                    <option value="all">সব  সেন্টার</option>
+                                    <% center.forEach((row) => { %>
+                                        <option value="<%= row.id %>"> <%= row.uname %> </option>
+                                    <%  }) %>
+                                </select>
+                            </div>
+                            <div class="col ">
                                 <div class="widget">
                                     <div class="widget-body">
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="state">
                                                 <h6>চারা উৎপাদন</h6>
-                                                <h4><%= new Number(totalProduction).toLocaleString("bn-BD") %></h4>
+                                                <h4 id="totalProduction"><%= new Number(totalProduction).toLocaleString("bn-BD") %></h4>
                                             </div>
                                             <div class="icon">
                                                 <i class="ik ik-award"></i>
                                             </div>
                                         </div>
-                                        
                                     </div>
-                                   
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="col ">
                                 <div class="widget">
                                     <div class="widget-body">
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="state">
                                                 <h6>চারা বিতরণ</h6>
-                                                <h4> <%= new Number(totalBitoron).toLocaleString("bn-BD") %> </h4>
+                                                <h4 id="totalBitoron"> <%= new Number(totalBitoron).toLocaleString("bn-BD") %> </h4>
                                             </div>
                                             <div class="icon">
                                                 <i class="ik ik-award"></i>
                                             </div>
                                         </div>
-                                        
+
                                     </div>
-                                    
+
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="col ">
                                 <div class="widget">
                                     <div class="widget-body">
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="state">
                                                 <h6>চারা সংরক্ষণ/মজুদ</h6>
-                                                <h4><%= new Number(totalMojud).toLocaleString("bn-BD") %></h4>
+                                                <h4 id="totalMojud"><%= new Number(totalMojud).toLocaleString("bn-BD") %></h4>
                                             </div>
                                             <div class="icon">
                                                 <i class="ik ik-award"></i>
                                             </div>
                                         </div>
                                     </div>
-                                    
+
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="col ">
                                 <div class="widget">
                                     <div class="widget-body">
                                         <div class="d-flex justify-content-between align-items-center">
@@ -72,12 +76,37 @@
                                             </div>
                                         </div>
                                     </div>
-                                    
+
                                 </div>
                             </div>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
-        
         <%- include('../includes/footer')-%>
+        <script type="text/javascript">
+    $('#center').on("change",function () {
+        var center = $('#center').val();
+        $.ajax({
+            type: "POST",
+            url: "/centerData",
+            data: {center: center},
+            datatype: "json",
+            beforeSend: function() {
+                // setting a timeout
+                $('#loading').show();
+                $('#output').hide();
+            },
+            success: function (data) {
+                $('#totalProduction').html(new Number(data.totalProduction).toLocaleString("bn-BD"));
+                $('#totalBitoron').html(new Number(data.totalBitoron).toLocaleString("bn-BD"));
+                $('#totalMojud').html(new Number(data.totalMojud).toLocaleString("bn-BD"));
+            },
+            complete: function() {
+                $('#loading').hide();
+                $('#output').show();
+            }
+        });
+    });
+</script>
