--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,22 +142,23 @@
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
                 
             <div class="col-block stats__col ">
-                <div class="stats__counts"><%= new Number(totalProduction).toLocaleString("bn-BD") %></div>
+                <div class="stats__counts" id="totalProduction"><%= new Number(totalProduction).toLocaleString("bn-BD") %></div>
                 <h5>চারা উৎপাদন</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__counts"> <%= new Number(totalBitoron).toLocaleString("bn-BD") %> </div>
+                <div class="stats__counts" id="totalBitoron"> <%= new Number(totalBitoron).toLocaleString("bn-BD") %> </div>
                 <h5>চারা বিতরণ</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__counts"><%= new Number(totalMojud).toLocaleString("bn-BD") %></div>
+                <div class="stats__counts" id="totalMojud"><%= new Number(totalMojud).toLocaleString("bn-BD") %></div>
                 <h5>চারা সংরক্ষণ/মজুদ</h5>
             </div>
             <div class="col-block stats__col">
-                <select style="font-size: 2.5rem; background: #39b54a;" class="browser-default custom-select">
-                    <option selected>সেন্টার</option>
-                    <option value="1">মাশরুম উন্নয়ন ইন্সটিউট</option>
-                    <option value="2">সোবাহানবাগ,সাভার</option>
+                <select style="font-size: 2.5rem; background: #39b54a;" class="browser-default custom-select" id="center">
+                    <option value="all">সব  সেন্টার</option>
+                    <% center.forEach((row) => { %>
+                        <option value="<%= row.id %>"> <%= row.uname %> </option>
+                    <%  }) %>
                   </select>
             </div>
 
@@ -435,6 +436,31 @@
     <script src="landingPage/js/jquery-3.2.1.min.js"></script>
     <script src="landingPage/js/plugins.js"></script>
     <script src="landingPage/js/main.js"></script>
+    <script type="text/javascript">
+        $('#center').on("change",function () {
+            var center = $('#center').val();
+            $.ajax({
+                type: "POST",
+                url: "/centerData",
+                data: {center: center},
+                datatype: "json",
+                beforeSend: function() {
+                    // setting a timeout
+                    $('#loading').show();
+                    $('#output').hide();
+                },
+                success: function (data) {
+                    $('#totalProduction').html(new Number(data.totalProduction).toLocaleString("bn-BD"));
+                    $('#totalBitoron').html(new Number(data.totalBitoron).toLocaleString("bn-BD"));
+                    $('#totalMojud').html(new Number(data.totalMojud).toLocaleString("bn-BD"));
+                },
+                complete: function() {
+                    $('#loading').hide();
+                    $('#output').show();
+                }
+            });
+        });
+    </script>
 
 </body>
 
