--- a/views/pd/dashboard.ejs
+++ b/views/pd/dashboard.ejs
@@ -1,83 +1,284 @@
 <%- include('../includes/header')-%>
-        <div class="wrapper">
-          <%- include('../includes/topbar')-%>
+<div class="wrapper">
+    <%- include('../includes/topbar')-%>
 
-            <div class="page-wrap">
-              <%- include('../includes/sidebar')-%>
-
-                
-                <div class="main-content">
-                    <div class="container-fluid">
-                        <div class="row clearfix">
-                            <div class="col-lg-3 col-md-6 col-sm-12">
-                                <div class="widget">
-                                    <div class="widget-body">
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <div class="state">
-                                                <h6>চারা উৎপাদন</h6>
-                                                <h4>৯০,০০০</h4>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ik ik-award"></i>
-                                            </div>
-                                        </div>
-                                        
+    <div class="page-wrap">
+        <%- include('../includes/sidebar')-%>
+        <div class="main-content">
+            <div class="container-fluid">
+                <div class="row clearfix">
+                    <div class="col">
+                        <select id="center" class="form-control">
+                            <option value="all">সব  সেন্টার</option>
+                            <% center.forEach((row) => { %>
+                                <option value="<%= row.id %>"> <%= row.uname %> </option>
+                            <%  }) %>
+                        </select>
+                    </div>
+                    <div class="col ">
+                        <div class="widget">
+                            <div class="widget-body">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="state">
+                                        <h6>চারা উৎপাদন</h6>
+                                        <h4 id="totalProduction"><%= new Number(totalProduction).toLocaleString("bn-BD") %></h4>
                                     </div>
-                                   
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12">
-                                <div class="widget">
-                                    <div class="widget-body">
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <div class="state">
-                                                <h6>চারা বিতরণ</h6>
-                                                <h4>৫০,০০০ </h4>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ik ik-award"></i>
-                                            </div>
-                                        </div>
-                                        
+                                    <div class="icon">
+                                        <i class="ik ik-award"></i>
                                     </div>
-                                    
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12">
-                                <div class="widget">
-                                    <div class="widget-body">
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <div class="state">
-                                                <h6>চারা সংরক্ষণ/মজুদ</h6>
-                                                <h4>৪০,০০০</h4>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ik ik-award"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12">
-                                <div class="widget">
-                                    <div class="widget-body">
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <div class="state">
-                                                <h6>রাজস্ব আয়</h6>
-                                                <h4>৮০০০০০০ টাকা</h4>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ik ik-award"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="col ">
+                        <div class="widget">
+                            <div class="widget-body">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="state">
+                                        <h6>চারা বিতরণ</h6>
+                                        <h4 id="totalBitoron"> <%= new Number(totalBitoron).toLocaleString("bn-BD") %> </h4>
+                                    </div>
+                                    <div class="icon">
+                                        <i class="ik ik-award"></i>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col ">
+                        <div class="widget">
+                            <div class="widget-body">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="state">
+                                        <h6>চারা সংরক্ষণ/মজুদ</h6>
+                                        <h4 id="totalMojud"><%= new Number(totalMojud).toLocaleString("bn-BD") %></h4>
+                                    </div>
+                                    <div class="icon">
+                                        <i class="ik ik-award"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col ">
+                        <div class="widget">
+                            <div class="widget-body">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="state">
+                                        <h6>রাজস্ব আয়</h6>
+                                        <h4>৮০০০০০০ টাকা</h4>
+                                    </div>
+                                    <div class="icon">
+                                        <i class="ik ik-award"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="container-fluid">
+                        <div class="card">
+                            <div class="card-body">
+
+                                    <div class="form-row">
+                                        <div class="col">
+                                            <label for="">Main Category</label>
+                                            <select class="form-control" id="main_category" name="category">
+                                                <option selected> Select a Category </option>
+                                                <% crop.forEach((row) => {
+                                                if (row.type === 'mainCategory'){
+                                                %>
+                                                    <option value="<%= row.id %>"> <%= row.name %> </option>
+                                                <%
+                                                }
+                                                })
+                                                %>
+                                            </select>
+                                        </div>
+                                        <div class="col">
+                                            <label for="">Sub Category</label>
+                                            <input type="text"  id="sub_category" name="sub_category" class="form-control">
+                                        </div>
+                                        <div class="col">
+                                            <label for=""></label>
+                                            <button class="btn btn-primary" id="add_sub_category">Add সাব-ক্যাটাগরি</button>
+                                        </div>
+                                    </div>
+
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+
+                                <div class="form-row">
+                                    <div class="col">
+                                        <label for="">Subcategory</label>
+                                        <select class="form-control" id="sub_category_list" name="subcategory">
+                                            <option selected> Select a Sub Category </option>
+                                            <% crop.forEach((row) => {
+                                                if (row.type === 'subCategory'){
+                                            %>
+                                                        <option value="<%= row.id %>"> <%= row.name %> </option>
+                                            <%
+                                                    }
+                                                })
+                                            %>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <label for="">Biboron</label>
+                                        <input type="text" id="biboron" name="biboron" class="form-control">
+                                    </div>
+                                    <div class="col">
+                                        <label for=""></label>
+                                        <button class="btn btn-primary" id="add_biboron">Add বিবরণ</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+
+                                <div class="form-row">
+                                    <div class="col">
+                                        <label for="">Biboron</label>
+                                        <select class="form-control" id="biboron_list" name="biboron">
+                                            <option selected> Select a Biboron </option>
+                                            <% crop.forEach((row) => {
+                                                if (row.type === 'biboron'){
+                                            %>
+                                                     <option value="<%= row.id %>"> <%= row.name %> </option>
+                                            <%
+                                                 }
+                                                })
+                                            %>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <label for="">Jaat</label>
+                                        <input type="text" id="jaat" name="jaat" class="form-control">
+                                    </div>
+                                    <div class="col">
+                                        <label for=""></label>
+                                        <button class="btn btn-primary" id="add_jaat">Add জাত</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
-        
-        <%- include('../includes/footer')-%>
+    </div>
+</div>
+<%- include('../includes/footer')-%>
+<script type="text/javascript">
+    $('#center').on("change",function () {
+        var center = $('#center').val();
+        $.ajax({
+            type: "POST",
+            url: "/centerData",
+            data: {center: center},
+            datatype: "json",
+            beforeSend: function() {
+                // setting a timeout
+                $('#loading').show();
+                $('#output').hide();
+            },
+            success: function (data) {
+                $('#totalProduction').html(new Number(data.totalProduction).toLocaleString("bn-BD"));
+                $('#totalBitoron').html(new Number(data.totalBitoron).toLocaleString("bn-BD"));
+                $('#totalMojud').html(new Number(data.totalMojud).toLocaleString("bn-BD"));
+            },
+            complete: function() {
+                $('#loading').hide();
+                $('#output').show();
+            }
+        });
+    });
+
+    $('#add_sub_category').on("click",function (){
+        var main_category = $('#main_category').val()
+        var sub_category = $('#sub_category').val()
+        $.ajax({
+            type: "POST",
+            url: "/pd/add/subcategory",
+            data: {main_category: main_category, sub_category: sub_category},
+            datatype: "json",
+            beforeSend: function() {
+                // setting a timeout
+                $('#loading').show();
+                $('#output').hide();
+            },
+            success: function (data) {
+                // $('#totalProduction').html(new Number(data.totalProduction).toLocaleString("bn-BD"));
+                // $('#totalBitoron').html(new Number(data.totalBitoron).toLocaleString("bn-BD"));
+                // $('#totalMojud').html(new Number(data.totalMojud).toLocaleString("bn-BD"));
+            },
+            complete: function() {
+                $('#loading').hide();
+                $('#output').show();
+            }
+        });
+    })
+
+    $('#add_biboron').on("click",function (){
+        var sub_category_list = $('#sub_category_list').val()
+        var biboron = $('#biboron').val()
+        $.ajax({
+            type: "POST",
+            url: "/pd/add/biboron",
+            data: {sub_category_list: sub_category_list, biboron: biboron},
+            datatype: "json",
+            beforeSend: function() {
+                // setting a timeout
+                $('#loading').show();
+                $('#output').hide();
+            },
+            success: function (data) {
+                // $('#totalProduction').html(new Number(data.totalProduction).toLocaleString("bn-BD"));
+                // $('#totalBitoron').html(new Number(data.totalBitoron).toLocaleString("bn-BD"));
+                // $('#totalMojud').html(new Number(data.totalMojud).toLocaleString("bn-BD"));
+            },
+            complete: function() {
+                $('#loading').hide();
+                $('#output').show();
+            }
+        });
+    })
+
+    $('#add_jaat').on("click",function (){
+        var biboron_list = $('#biboron_list').val()
+        var jaat = $('#jaat').val()
+        $.ajax({
+            type: "POST",
+            url: "/pd/add/jaat",
+            data: {biboron_list: biboron_list, jaat: jaat},
+            datatype: "json",
+            beforeSend: function() {
+                // setting a timeout
+                $('#loading').show();
+                $('#output').hide();
+            },
+            success: function (data) {
+                // $('#totalProduction').html(new Number(data.totalProduction).toLocaleString("bn-BD"));
+                // $('#totalBitoron').html(new Number(data.totalBitoron).toLocaleString("bn-BD"));
+                // $('#totalMojud').html(new Number(data.totalMojud).toLocaleString("bn-BD"));
+            },
+            complete: function() {
+                $('#loading').hide();
+                $('#output').show();
+            }
+        });
+    })
+</script>
