--- a/views/pd/employee/chak1/employeeChak1Table.ejs
+++ b/views/pd/employee/chak1/employeeChak1Table.ejs
@@ -1,5 +1,5 @@
 <%if (records.length >0){ %>
-    <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+    <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
         <th>হরটিকালচার সেন্টারের নাম</th>
