--- a/views/pd/worker/workerNum/workerNum.ejs
+++ b/views/pd/worker/workerNum/workerNum.ejs
@@ -15,7 +15,7 @@
                             <div class="card-body">
                                 <div class="row clearfix">
                                     <div class="col-md-3">
-                                        <select id="center" name="center" required>
+                                        <select id="center" class="form-control" name="center" required>
                                             <option value="all">সকল সেন্টারের তথ্য</option>
                                             <% if (centers.length >0){ %>
                                                 <% centers.forEach(function (center) { %>
@@ -25,8 +25,8 @@
                                         </select>
                                     </div>
                                     <div class="col-md-3">
-                                        <label for="month">মাস:</label>
-                                        <select id="month" name="month">
+                                        <!-- <label for="month">মাস:</label> -->
+                                        <select id="month" class="form-control" name="month">
                                             <option value="january">জানুয়ারি</option>
                                             <option value="february">ফেব্রুয়ারি</option>
                                             <option value="march">মার্চ</option>
@@ -42,8 +42,8 @@
                                         </select>
                                     </div>
                                     <div class="col-md-3">
-                                        <label for="year">অর্থবছর:</label>
-                                        <select id="year" name="year">
+                                        <!-- <label for="year">অর্থবছর:</label> -->
+                                        <select id="year" class="form-control" name="year">
                                             <option value="2017">২০১৭-১৮</option>
                                             <option value="2018">২০১৮-১৯</option>
                                             <option value="2019">২০১৯-২০</option>
@@ -85,6 +85,39 @@
 
    
 <%- include('../../../includes/footer')-%>
+<script type="text/javascript">
+    function exportToExcel(tableID, filename = ''){
+        var downloadurl;
+        var dataFileType = 'application/vnd.ms-excel';
+        var tableSelect = document.getElementById(tableID);
+        var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
+        
+        // Specify file name
+        filename = filename?filename+'.xls':'export_excel_data.xls';
+        
+        // Create download link element
+        downloadurl = document.createElement("a");
+        
+        document.body.appendChild(downloadurl);
+        
+        if(navigator.msSaveOrOpenBlob){
+            var blob = new Blob(['\ufeff', tableHTMLData], {
+                type: dataFileType
+            });
+            navigator.msSaveOrOpenBlob( blob, filename);
+        }else{
+            // Create a link to the file
+            downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
+        
+            // Setting the file name
+            downloadurl.download = filename;
+            
+            //triggering the function
+            downloadurl.click();
+        }
+    }
+     
+    </script>
 <script>
                 
     $(document).ready(function(){
