--- a/views/pd/dashboard.ejs
+++ b/views/pd/dashboard.ejs
@@ -155,7 +155,7 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <% records.forEach(function(row){ %>
+                                            <% dashImage.forEach(function(row){ %>
                                                 <tr>
                                                     <td colspan="10">No data Found</td>
                                                 </tr>
