--- a/views/center/dashboard.ejs
+++ b/views/center/dashboard.ejs
@@ -109,7 +109,7 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <% records.forEach(function(row){ %>
+                                            <% dashImage.forEach(function(row){ %>
                                                 <tr>
                                                     <td colspan="10">No data Found</td>
                                                 </tr>
